# proj_759

./: CMakeLists.txt  Final Project Proposal.docx  HPC_Final_Report_Sumukha.docx  HPC_Report.docx  README.md  forward.sh  update.cu
1_matrix_train_cuda/: README_matrix_train_cuda.md  backward.cu  cuda_dnn_modular.exp  cuda_dnn_modular.lib  forward.cu  makefile
2_cpu_parallel_overlap/: README_cpu_parallel_overlap.md  communicate.cpp  communicate.h  compute.cpp  compute.h  how to run.md  main.cpp  main_overlap.cpp  main_sequential.cpp  makefile
3_cuda_mpi_overlap/: README_cuda_mpi_overlap.md  allreduce.cpp  allreduce.h  backward.cpp  backward.h  how to run.md  main.cpp  makefile
4_nccl_optimized/: README_cuda_overlap_simulation.md  communicate.cpp  communicate.h  compute.cpp  compute.h  how to run.md  main.cpp  makefile  overlap_performance_plot.py  python execution_time_scaling_plot.py  timing_data.csv
framework/baseline/: phase1_run.lib
framework/openmp_overlap_2/: main.cpp
framework/phase1_baseline/: cuda_dnn_baseline.lib  main.cu  read.txt
framework/phase3_cuda_mpi_overlap/: main.cpp  read.txt
framework_ignore/baseline_1/: cuda_dnn_baseline.exp  phase1_run.exp
framework_ignore/openmp_overlap_2/: read.txt
logs/: manual.err  manual.out  manual_2045827.err  manual_2045827.out
matrix_train_cuda/: backward.cu  forward.cu  how_to_run.md  main.cu  update.cu
python/: save_pytorch_baseline.py
src/: forward.cu  main.cpp
